--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 </head>
 <body>
+    <header>
+        <h1 class="text-center pt-4 pb-4 " >ESTATE '24</h1>
+    </header>
+
+    <main>
+        
+    </main>
     
+
     <script src="main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
