--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <div class="row g-4 justify-content-center">
                 <div class="col-4 d-flex justify-content-center">
                     <picture class="bCard">
+                        <img id="pin" src="img/pin.svg" alt="pin">
                         <img id="img" src="img/dolomiti-montagna-neve-inverno.jpg.webp" alt="montagna">
                         <p>Lorem ipsum dolor manet</p>
                     </picture>
