--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <main>
          <div class="container">
-            <div class="row g-4 justify-content-center">
+            <div id="gallery" class="row g-4 justify-content-center">
                 <!-- <div class="col-4 d-flex justify-content-center">
                     <picture class="bCard">
                         <img id="pin" src="img/pin.svg" alt="pin">
