--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
           </div>
 
     </main>
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <img style="width: 400px;" src="img/dolomiti-montagna-neve-inverno.jpg.webp" alt="dolomiti">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="z-3 position-absolute p-5 rounded-3"><span>z-3</span></div>
 
     <script src="main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
