--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
             </div>
         </div>
     </div>
-    <div class="z-3 position-absolute p-5 rounded-3"><span>z-3</span></div>
+    
+    <div class="overlay">
+        <img src="https://marcolanci.it/boolean/assets/pictures/1.png" alt="img">
+    </div>
 
     <script src="main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
