--- a/index.html
+++ b/index.html
@@ -30,20 +30,8 @@
           </div>
 
     </main>
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <img style="width: 400px;" src="img/dolomiti-montagna-neve-inverno.jpg.webp" alt="dolomiti">
-                </div>
-            </div>
-        </div>
-    </div>
     
-    <div class="overlay">
+    <div class="overlay overlay1">
         <img src="https://marcolanci.it/boolean/assets/pictures/1.png" alt="img">
     </div>
 
