prova bottone chiudi

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 
     </main>
     
-    <div class="overlay overlay1">
+    <div id="modal" class="overlay1">
         <img src="https://marcolanci.it/boolean/assets/pictures/1.png" alt="img">
+        <button id="btn">Chiudi</button>
     </div>
 
     <script src="main.js"></script>
