--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </main>
     
     <div id="modal" class="overlay1">
-        <img src="https://marcolanci.it/boolean/assets/pictures/1.png" alt="img">
+        <img src="https://marcolanci.it/boolean/assets/pictures/1.png" alt="img" id="preview_img">
         <button id="btn">Chiudi</button>
     </div>
 
